# DownloaderRomsMyrientManager

./: .gitignore  BUILD_INSTRUCTIONS.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_GUIDE.md  RELEASE_NOTES_v1.0.1.md  build.py  build_linux.sh  build_windows.bat  downloadroms.py  myrient_manager.py  preview_downloadroms.py  pyproject.toml  requirements.txt
.github/workflows/: README.md  build-releases.yml  test-build.yml
modules/: README.md  __init__.py  analyzer.py  config.py  display.py  extractor.py  fetcher.py  filters.py  ui.py  utils.py
