[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "myrient-rom-manager"
version = "1.0.0"
description = "Intelligent ROM downloader for Myrient platform with region priority"
authors = [
    {name = "ROM Manager Team"}
]
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.7"
dependencies = [
    "requests>=2.25.0",
    "beautifulsoup4>=4.9.0"
]
keywords = ["rom", "downloader", "myrient", "gaming", "preservation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Games/Entertainment",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/your-username/myrient-rom-manager"
Repository = "https://github.com/your-username/myrient-rom-manager"
Issues = "https://github.com/your-username/myrient-rom-manager/issues"

[project.scripts]
myrient-manager = "myrient_manager:main"
myrient-download = "downloadroms:main"

[tool.setuptools]
packages = ["."]